cmake_minimum_required (VERSION 3.5 FATAL_ERROR)
include(${CMAKE_SOURCE_DIR}/cmake/cmake_utils.cmake)
cmake_include_guard(normal_mode)

# Normal mode modules.
add_library(normal_mode_modules cartesian_displacement.f90 cartesian_force.f90 cartesian_hessian.f90 mass_weighted_displacement.f90 mass_weighted_force.f90 real_mode.f90 complex_mode.f90 real_single_mode_displacement.f90 real_single_mode_force.f90 complex_single_mode_displacement.f90 complex_single_mode_force.f90 real_mode_displacement.f90 real_mode_force.f90 complex_mode_displacement.f90 complex_mode_force.f90 complex_polynomial.f90 real_polynomial.f90 paired_polynomial.f90 real_complex_conversion.f90 complex_mode_symmetry.f90 degenerate_subspace.f90 process_modes.f90 normal_mode.f90)
add_library(normal_mode_submodules cartesian_displacement_submodule.f90 cartesian_force_submodule.f90 cartesian_hessian_submodule.f90 mass_weighted_displacement_submodule.f90 mass_weighted_force_submodule.f90 real_mode_submodule.f90 complex_mode_submodule.f90 real_single_mode_displacement_submodule.f90 real_single_mode_force_submodule.f90 complex_single_mode_displacement_submodule.f90 complex_single_mode_force_submodule.f90 real_mode_displacement_submodule.f90 real_mode_force_submodule.f90 complex_mode_displacement_submodule.f90 complex_mode_force_submodule.f90 complex_polynomial_submodule.f90 real_polynomial_submodule.f90 paired_polynomial_submodule.f90 real_complex_conversion_submodule.f90 complex_mode_symmetry_submodule.f90 degenerate_subspace_submodule.f90 process_modes_submodule.f90)
target_link_libraries(normal_mode_submodules normal_mode_modules)
add_dependencies(normal_mode_submodules normal_mode_modules)

# Link against required module.
foreach(dir IN ITEMS utils structure)
  target_link_libraries(normal_mode_modules ${dir}_modules)
  target_link_libraries(normal_mode_submodules ${dir}_submodules)
  add_dependencies(normal_mode_modules ${dir}_modules)
endforeach()

# Enable testing.
if(BUILD_TESTS)
  set(test_srcs cartesian_displacement_test.pf cartesian_force_test.pf cartesian_hessian_test.pf mass_weighted_displacement_test.pf mass_weighted_force_test.pf real_mode_test.pf complex_mode_test.pf real_single_mode_displacement_test.pf real_single_mode_force_test.pf complex_single_mode_displacement_test.pf complex_single_mode_force_test.pf real_mode_displacement_test.pf real_mode_force_test.pf complex_mode_displacement_test.pf complex_mode_force_test.pf complex_polynomial_test.pf real_polynomial_test.pf paired_polynomial_test.pf real_complex_conversion_test.pf complex_mode_symmetry_test.pf degenerate_subspace_test.pf process_modes_test.pf)
  add_pfunit_ctest(normal_mode_tests TEST_SOURCES ${test_srcs} LINK_LIBRARIES funit ${PFUNIT_LIBRARIES})
  target_link_libraries(normal_mode_tests normal_mode_submodules)
endif()
